--- a/src/app/pages/admin/view-quiz-questions/view-quiz-questions.component.css
+++ b/src/app/pages/admin/view-quiz-questions/view-quiz-questions.component.css
@@ -1,8 +1,6 @@
 .mt10{
     margin-top: 10px;
 }
-
-
 mat-card {
     margin: 10px 0;
   }
@@ -15,3 +13,13 @@ mat-card {
     padding-bottom: 0; /* Reduce the padding if needed */
   }
   
+
+  .w100{
+    width: 100%;
+}
+
+
+.more_verti{
+  margin-bottom: -5px;
+  background-color: rgb(241, 239, 243);
+}
