--- a/src/app/pages/user/register-courses/register-courses.component.html
+++ b/src/app/pages/user/register-courses/register-courses.component.html
@@ -10,6 +10,8 @@ text="Loading information!"
 
 
 <div ngxUiLoaderBlurred (blur)="50">
+
+	<!-- {{uniqueLevels | json}} -->
 	<!-- <h4>Yet To register</h4>
 <hr>
 {{unRegCourse | json}} -->
