Restriction on only one attempt on quiz done!

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,37 +1,18 @@
-<div class="bootstrap-wrapper">
-    <div class="container-fluid">
-        <div class="navbar">
-
-            <mat-toolbar color="primary">
-                <div class="row">
-                    <div class="col-md-2">
-
-                        <a mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-                            <p>&#169; ACT</p> 
-                        </a>
-
-                    </div>
+<!-- home.component.html -->
+<div class="home-container">
+    <!-- Header -->
+  
+    <!-- Footer -->
+    <footer class="footer" @fadeIn>
+      <p>&copy; 2024 ACL. All rights reserved.</p>
 
 
-                    <!-- <div class="col-md-8" id="second">
-                        <a mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
-                            href="mailto:immanuelderry32@gmail.com">
-                            Contact via email
-                            <mat-icon>menu_book</mat-icon>
-                        </a>
+      <nav>
+        <a mat-button routerLink="/privacy">Privacy Policy</a>
+        <a mat-button routerLink="/terms">Terms of Service</a>
+      </nav>
 
-                    </div>
-
-
-                    <div class="col-md-2">
-                        <p>Contact immanuelderry32@gmail.com</p> 
-                        <p><a>facebook @ ATC</a></p>
-                    </div> -->
-
-                </div>
-
-            </mat-toolbar>
-
-        </div>
-    </div>
-</div>
+      
+    </footer>
+  </div>
+  
