--- a/src/app/pages/user/sidebar/sidebar.component.html
+++ b/src/app/pages/user/sidebar/sidebar.component.html
@@ -8,6 +8,10 @@
 <button mat-list-item  mat-list-item routerLink="/user-dashboard/quizzes"> <mat-icon mat-list-icon  class="icon-position">quiz</mat-icon> &nbsp;Available Quizzes</button>
 <!-- <button mat-list-item  mat-list-item routerLink="/user-dashboard/register-courses"> <mat-icon mat-list-icon  class="icon-position">quiz</mat-icon> &nbsp;Register Courses</button> -->
 
+<button   (click)="logout()" mat-list-item>
+     <mat-icon mat-list-icon  class="icon-position" >logout</mat-icon>Logout
+</button>
+
 
 
 <!-- <button mat-list-item  mat-list-item routerLink="/user-dashboard/0"> <mat-icon mat-list-icon  class="icon-position">quiz</mat-icon> &nbsp;All Quizzes</button> -->
