--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -282,6 +282,11 @@
 
                     <!-- </div> -->
 
+<!-- YOU CAN USE THIS BUTTON TO TEST THE SUBMIT -->
+                    <!-- <div class="contianer text-center mt20 mb20">
+                        <button mat-raised-button color="primary" (click)="evalSubjective()"
+                            [disabled]="isSubmitDisabled">Test Submit Quiz</button>
+                    </div> -->
                 </div>
 
 
