--- a/src/app/pages/admin/view-quiz-questions/view-quiz-questions.component.html
+++ b/src/app/pages/admin/view-quiz-questions/view-quiz-questions.component.html
@@ -71,19 +71,44 @@
                 </div>
                 <div mat-dialog-actions>
                   <button mat-button (click)="dialogRef.close()">Cancel</button>
-                  <!-- <button mat-button (click)="dialogRef.close(data.question)" onclick="updateTheoryQuestion()">Update</button> -->
                   <button mat-button  (click)="updateTheoryQuestion()">Update</button>
                 </div>
               </ng-template>
             
 
-              
+               <!-- POP UP DIALOG BOX FOR NUMBER OF QUESTIONS TO UPDATE -->
+            <ng-template #updateDialogNumQuestion let-data="data">
+                <h1 mat-dialog-title>Update Number of Questions</h1>
+
+                <div mat-dialog-content>
+                  <mat-form-field class="w100" appearance="fill">
+                    <mat-label>Number Theory to Answer</mat-label>
+                    <input matInput [(ngModel)]='numberOfquestionsToAnswer[0].totalQuestToAnswer'>
+                  </mat-form-field>
+                </div>
+
+                <div mat-dialog-actions>
+                  <button mat-button (click)="dialogRef.close()">Cancel</button>
+                  <button mat-button  (click)="updateTheoryNumberOfQuesToAnswer()">Update</button>
+                </div>
+              </ng-template>
+
+
 
 
 
             <!-- SECTION B -->
             <div *ngIf="getPrefixes().length>0">
                 <h1 style="text-align: center;">Section B</h1>
+                <mat-card>
+                    <!-- <div *ngFor="let qN of numberOfquestionsToAnswer"> -->
+                <h1 style="text-align: center;">Total Questions To Answer: <b>{{numberOfquestionsToAnswers[0].totalQuestToAnswer}}</b><button mat-button color="primary" 
+                    (click)="openUpdateNumberDialog(numberOfquestionsToAnswers[0].answerTheoryId, updateDialogNumQuestion)">Update</button>
+                </h1>
+            <!-- </div> -->
+            </mat-card>
+
+
                 <div *ngFor="let prefix of getPrefixes()">
                     <mat-card *ngIf="getGroupedQuestions(prefix).length > 0">
                         <mat-card-header>
